docs/docs/v2.6.0/documentation/styling.md
---
title: "Styling"
excerpt: ""
---
The tree comes with very basic style.
The following classes are available for customization:

* .tree
* .tree-node
* .tree-node-wrapper
* .tree-node-expanded
* .tree-node-collapsed
* .tree-node-focused
* .tree-node-active
* .tree-node-level-X
* .tree-node-leaf
* .node-wrapper
* .toggle-children-wrapper
* .toggle-children
* .toggle-children-placeholder
* .node-content-wrapper
* .tree-children
* .tree-node-loading
* .node-drop-slot
* .is-dragging-over
* .is-dragging-over-disabled

Here is the result HTML of the tree (written in HAML syntax for clarity):
[block:code]
{
  "codes": [
    {
      "code": "%tree\n  %div.tree\n    %treenode\n      %div.tree-node.tree-node-level-1.( tree-node-expanded | tree-node-collapsed | tree-node-active | tree-node-focused | tree-node-leaf )\n        %treenodedropslot\n          %div.node-drop-slot\n\n        %div.node-wrapper\n          %span.toggle-children-wrapper\n            %span.toggle-children\n          // or:\n          %span.toggle-children-placeholder\n\n          %div.node-content-wrapper (.is-dragging-over | .is-dragging-over-disabled)\n            %treenodecontent\n              %span\n                {{ node name }}\n\n        %div.tree-children\n          %div\n            %treenode\n              ...\n            %treenode\n              ...\n          // or:\n          %loadingcomponent.tree-node-loading\n            %span\n              {{ ...loading }}\n        // or:\n        %div.tree-children\n\n\n      %treenodedropslot\n        %div.node-drop-slot\n",
      "language": "haml"
    }
  ]
}
[/block]

[block:api-header]
{
  "type": "basic",
  "title": "Example styles"
}
[/block]

[block:api-header]
{
  "type": "basic",
  "title": "Branch lines"
}
[/block]
This theme puts explorer like branch lines that connect the parents with their children
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/f50955b-Screen_Shot_2016-11-29_at_12.11.52_PM.png",
        "Screen Shot 2016-11-29 at 12.11.52 PM.png",
        366,
        390,
        "#111111"
      ]
    }
  ]
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": ".node-content-wrapper, .tree-children {\n  position: relative;\n}\n\n.node-content-wrapper::before, .tree-children::after {\n  content: \"\";\n  position: absolute;\n}\n\n.node-content-wrapper::before {\n  border-bottom: 1px solid lightgrey;\n  border-left: 1px solid lightgrey;\n  height: 28px;\n  top: -17px;\n  width: 20px;\n  left: -28px;\n}\n\n.tree-node-leaf > .node-wrapper > .node-content-wrapper::before {\n  width: 25px;\n}\n\n.tree-children::after {\n  border-left: 1px solid lightgrey;\n  height: 100%;\n  top: -15px;\n  left: -15px;\n}\n\ntreenode:last-child > .tree-node > .tree-children::after {\n  border-left: none;\n}\n\n.toggle-children {\n  z-index: 1;\n}",
      "language": "css"
    }
  ]
}
[/block]

[block:api-header]
{
  "type": "basic",
  "title": "Pull right"
}
[/block]
This theme allows placing items in the right side of the tree nodes using `pull-right` class.
It is based on flexbox, so relevant only to browsers who support it
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/28d7625-Screen_Shot_2016-11-29_at_12.11.01_PM.png",
        "Screen Shot 2016-11-29 at 12.11.01 PM.png",
        710,
        414,
        "#181818"
      ]
    }
  ]
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": ".tree {\n  width: 300px;\n}\n\n.node-content-wrapper {\n  display: flex;\n  flex-wrap: wrap;\n  align-items: baseline;\n}\n\n.node-content-wrapper {\n  flex-grow: 1;\n  position: relative;\n}\n\n.pull-right {\n  position: absolute;\n  right: 10px;\n}",
      "language": "css"
    }
  ]
}
[/block]

[block:api-header]
{
  "type": "basic",
  "title": "Send me your theme"
}
[/block]
If you've created a nice style for the tree, I will appreciate if you send me and I will showcase it here.
adam@500tech.com